Added new features, updated existing files, and removed obsolete components

--- a/code/demo/src/main/resources/templates/registration.html
+++ b/code/demo/src/main/resources/templates/registration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!--suppress ALL -->
+<html lang="en">
 <head>
     <title>Code Editor - Register</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
