--- a/code/demo/src/main/resources/static/css/style.css
+++ b/code/demo/src/main/resources/static/css/style.css
@@ -41,12 +41,12 @@ header {
   align-items: center;
   position: relative;
   width: 400px;
-  height: 340px;
+  height: 440px;
   background: transparent;
   backdrop-filter: blur(2px);
   overflow: hidden;
   border-radius: 20px;
-  box-shadow: 0px 0px 30px rgba(136, 130, 130, 0.445);
+  box-shadow: 0 0 30px rgba(136, 130, 130, 0.445);
   transition: height 0.2s ease;
 }
 
@@ -59,7 +59,7 @@ header {
   background: transparent;
   backdrop-filter: blur(2px);
   border-radius: 20px;
-  box-shadow: 0px 0px 30px rgba(136, 130, 130, 0.445);
+  box-shadow: 0 0 30px rgba(136, 130, 130, 0.445);
   transition: height 0.2s ease;
   margin-top: 100px;
 }
@@ -139,7 +139,7 @@ header {
 }
 
 .login-register {
-  font-size: 14.5px;
+  font-size: 15px;
   text-align: center;
   color: white;
   margin: 20px 0 15px;
